--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "@faker-js/faker": "^9.6.0"
+  },
   "devDependencies": {
     "@types/node": "^22.10.1",
     "ts-node": "^10.9.2",
